--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://admin:12345678@proyecto-verificador-docs-instance-1.cnucesoqm5d3.us-east-2.rds.amazonaws.com:3306/proyecto-verificador-docs"
+#DATABASE_URL="mysql://admin:12345678@proyecto-verificador-docs-instance-1.cnucesoqm5d3.us-east-2.rds.amazonaws.com:3306/proyecto-verificador-docs"
+DATABASE_URL="postgresql://proyecto-verificador-docs-db_owner:lFYO1zgj4kHJ@ep-sparkling-violet-a55yfru8-pooler.us-east-2.aws.neon.tech/proyecto-verificador-docs-db?sslmode=require"
 JWT_SECRET="SECRETO"
 
 AWS_ACCESS_KEY_ID="AKIAQLSIVHSAP3K27IYK"
