--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "@aws-sdk/client-s3": "^3.633.0",
     "@aws-sdk/s3-request-presigner": "^3.633.0",
     "@prisma/client": "^5.18.0",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "prisma": "^5.18.0"
