--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.633.0",
+    "@aws-sdk/client-textract": "^3.637.0",
     "@aws-sdk/s3-request-presigner": "^3.633.0",
     "@prisma/client": "^5.18.0",
     "bcryptjs": "^2.4.3",
