--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@aws-sdk/s3-request-presigner": "^3.633.0",
     "@prisma/client": "^5.18.0",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.16.3",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "type-is": "^1.6.18"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
