--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
+    "sharp": "^0.33.5",
     "type-is": "^1.6.18"
   },
   "devDependencies": {
